refactor code and install uuid

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -21,6 +21,10 @@
       <a class="btn btn-primary btn-lg mt-4" href="./notes.html" role="button">Get Started</a>
     </div>
   </div>
+  <script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
   <script src="./assets/js/index.js"></script>
 </body>
 
